--- a/ui/category.css
+++ b/ui/category.css
@@ -39,22 +39,26 @@ body {
     color: #FC5C2A;
 }
 
-ul {
-    list-style-type: none;
-}
-
 #skillitBody {
     font-family: 'Open Sans Condensed', sans-serif;
     width: 100%;
     min-width: 794px;
-    margin-bottom: 32px;
+    padding-left: 30px;
+
 }
 
-#recentHeader {
-    font-family: 'League Gothic';
+.categoryTitle {
     text-transform: uppercase;
     font-size: 44px;
-    margin: 5px 20px 0 30px;
+    font-family: 'League Gothic';
+    font-weight: normal;
+    margin: 5px 5px 15px 5px;
+    position: relative;
+    right: 12px;
+}
+
+a {
+    text-decoration: none;
 }
 
 .recipe {
@@ -67,16 +71,16 @@ ul {
     box-shadow: 0 0 5px #888;
 }
 
-.recipe .recipeName {
+.recipe .recipeBlockHeader {
     font-size: 32px;
 }
 
-.recipe .recipeName a {
+.recipe .recipeBlockHeader a {
     color: #212223;
     text-decoration: none;
 }
 
-.recipe .recipeName a:hover {
+.recipe .recipeBlockHeader a:hover {
     color: #FC5C2A;
 }
 
@@ -99,44 +103,5 @@ ul {
 .recipeInfo .recipeDescription {
     margin-left: 140px;
     font-size: 18px;
-}
-
-.categories {
-    position: absolute;
-    top: 124px;
-    left: 688px;
-    width: 146px;
-    padding-right: 20px;
-    background: white;
-    font-family: 'Open Sans Condensed', sans-serif;
-    color: #212223;
-    -moz-box-shadow: 0 0 5px #888;
-    -webkit-box-shadow: 0 0 5px #888;
-    box-shadow: 0 0 5px #888;
-}
-
-.categories h2 {
-    font-style: italic;
-    font-weight: normal;
-    text-transform: lowercase;
-    margin: 5px;
-}
-
-.categories ul {
-    padding: 0 10px 10px 10px;
-    margin: 0;
-    font-size: 22px;
-}
-
-.categories a {
-    color: #212223;
-}
-
-.categories a:hover {
-    color: #76AED0;
-}
-
-a {
-    text-decoration: none;
 }
 
